Lattice objects evaluation is not properly decoupled when they share the same Lattice obdata. #78650

Closed
opened 2020-07-05 20:29:01 +02:00 by Michael Soluyanov · 18 comments

System Information
Operating system: Ubuntu 20.04 Linux-5.4.0-39-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-04 15:31, hash: 464aaf2701
Worked: Never

Open the file below and see how scaling one bone from one of the armature affects both lattice objects, which are sharing the same obdata.

#78650.blend


original report:

Short description of error
So I have a model of book page with lattice modifier for blending corners. Then using Library Override, Lattice modifier gets object from one and second linked blocks, constantly jumping over each other.

2020-07-05 21-25-55.mp4

Exact steps for others to reproduce the error

  1. Extract this 2 files in same folder.

Library Override Modifer Test.zip

  1. Open test.blend and play animation.

PS. I post this information here https://developer.blender.org/T70319, but it is not been resolved for my case, so I decided to open new bug report

**System Information** Operating system: Ubuntu 20.04 Linux-5.4.0-39-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-04 15:31, hash: `464aaf2701` Worked: Never Open the file below and see how scaling one bone from one of the armature affects both lattice objects, which are sharing the same obdata. [#78650.blend](https://archive.blender.org/developer/F8779893/T78650.blend) ------------------------------------ *original report:* **Short description of error** So I have a model of book page with lattice modifier for blending corners. Then using Library Override, Lattice modifier gets object from one and second linked blocks, constantly jumping over each other. [2020-07-05 21-25-55.mp4](https://archive.blender.org/developer/F8667602/2020-07-05_21-25-55.mp4) **Exact steps for others to reproduce the error** 1. Extract this 2 files in same folder. [Library Override Modifer Test.zip](https://archive.blender.org/developer/F8668016/Library_Override_Modifer_Test.zip) 2. Open test.blend and play animation. PS. I post this information here https://developer.blender.org/T70319, but it is not been resolved for my case, so I decided to open new bug report
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz

#86740 was marked as duplicate of this issue

#86740 was marked as duplicate of this issue

#84503 was marked as duplicate of this issue

#84503 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the problem in Release Build.

The file could be further simplified so that the real problem is revealed more clearly.

But I will go ahead and conirm this.

I can confirm the problem in Release Build. The file could be further simplified so that the real problem is revealed more clearly. But I will go ahead and conirm this.
Author
Member

Simplified version

lattice modifier.zip

Lattice modifier driven by bone scale

2020-07-09 10-51-24.mp4

Simplified version [lattice modifier.zip](https://archive.blender.org/developer/F8680326/lattice_modifier.zip) Lattice modifier driven by bone scale [2020-07-09 10-51-24.mp4](https://archive.blender.org/developer/F8680328/2020-07-09_10-51-24.mp4)
Bastien Montagne self-assigned this 2020-08-14 11:32:46 +02:00
Bastien Montagne removed their assignment 2020-08-14 12:08:03 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Eeeeh, issue has nothing to do with overrides in fact, you can reproduce similar case by duplicating the collection in original file, and assigning the same Lattice obdata to both lattice objects:

#78650.blend

So this is an evaluation issue, lattice obdata shared between objects are not properly decoupled for some reason.

Eeeeh, issue has nothing to do with overrides in fact, you can reproduce similar case by duplicating the collection in original file, and assigning the same Lattice obdata to both lattice objects: [#78650.blend](https://archive.blender.org/developer/F8779893/T78650.blend) So this is an evaluation issue, lattice obdata shared between objects are not properly decoupled for some reason.
Bastien Montagne changed title from Library Override: driven modifiers don't work properly to Lattice objects evaluation is not properly decoupled when they share the same Lattice obdata. 2020-08-14 12:11:21 +02:00

@crantisz A workaround for now is to also create overrides of those lattice obdata (Shift-click on the 'make local' icon to the right of the ID selector in the ObData properties)

@crantisz A workaround for now is to also create overrides of those lattice obdata (Shift-click on the 'make local' icon to the right of the ID selector in the ObData properties)

Added subscriber: @sozap

Added subscriber: @sozap

Added subscriber: @Mets

Added subscriber: @Mets
Member

Added subscriber: @fsiddi

Added subscriber: @fsiddi
Member

This will be a big problemo for the Studio, as the forest creatures of Sprite Fright will use (and already are using) plenty of lattices, and will be (and already are) duplicated plenty of times.

The current workarounds would either involve the animators individually shift-clicking every lattice(lattices which are thoroughly hidden) every time they duplicate a creature's collection, or I would need to distribute some nasty Python script that does it for them automatically - which I was told by @fsiddi is strictly forbidden, since this kind of stuff should be fixed properly. Also, who knows what kind of issues we would run into by making all those object datas single user.

Which basically translates to this being a showstopper for Sprite Fright! 😱 For now the animators were told to simply not use lattices while animating. Would be good to have this bumped on someone's priority list, or to get an ETA on it so we can plan and set expectations accordingly.

This will be a big problemo for the Studio, as the forest creatures of Sprite Fright will use (and already are using) plenty of lattices, and will be (and already are) duplicated plenty of times. The current workarounds would either involve the animators individually shift-clicking every lattice(lattices which are thoroughly hidden) every time they duplicate a creature's collection, or I would need to distribute some nasty Python script that does it for them automatically - which I was told by @fsiddi is strictly forbidden, since this kind of stuff should be fixed properly. Also, who knows what kind of issues we would run into by making all those object datas single user. Which basically translates to this being a showstopper for Sprite Fright! 😱 For now the animators were told to simply not use lattices while animating. Would be good to have this bumped on someone's priority list, or to get an ETA on it so we can plan and set expectations accordingly.
Sybren A. Stüvel self-assigned this 2021-03-22 10:46:41 +01:00

@mont29 I can't reproduce it with your no-overrides-used file, even when I try it with a 2.90 or 2.91 release. The simplified file from @crantisz does show the problem here on my machine.

@mont29 I can't reproduce it with your no-overrides-used file, even when I try it with a 2.90 or 2.91 release. The simplified file from @crantisz does show the problem here on my machine.
Member

Here is a (hopefully) simpler file to see the issue:
lattice_boy_instanced.blend
You just need to move the active bone and you should immediately see the problem.

Here is a (hopefully) simpler file to see the issue: [lattice_boy_instanced.blend](https://archive.blender.org/developer/F9903876/lattice_boy_instanced.blend) You just need to move the active bone and you should immediately see the problem.

This issue was referenced by 3681a619de

This issue was referenced by 3681a619ded1a6b225befc31ef87259081fb61e5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78650
No description provided.